--- a/404.html
+++ b/404.html
@@ -38,10 +38,6 @@
           <div class="wrapper">
             <h1 class="text-center ">404</h1>
           </div>
-          
-          <div class="msg">
-          <h3>Look like you're lost</h3>
-          <p>the page you are looking for is not available!</p>
            
           <div class="backbtn">
             <a href="/" class="btn">
@@ -50,7 +46,6 @@
           </a>
           </div>
 
-          </div>
         </div>
 </section>
 <!-- 404 section end -->
@@ -61,7 +56,7 @@
   <div class="box-container">
 
       <div class="box">
-          <h3>Jigar's Portfolio</h3>
+          <h3>Anoop's Portfolio</h3>
           <p>Thank you for visiting my personal portfolio website. Connect with me over socials. <br/> <br/> Keep Rising 🚀. Connect with me over live chat!</p>
       </div>
 
