--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
     <h2 class="heading"><i class="fas fa-laptop-code"></i> Skills & <span>Abilities</span></h2>
 
-    <div class="container">
+    <div class="container" height=1000px>
           <div class="row" id="skillsContainer">
 
             <div class="bar">
