--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="content">
         <h3>Bachelor of Engineering in Information Science</h3>
         <p>KLS Gogte Institute of Technology | GIT</p>
-        <h4>2018-2022 | Undergraduate </h4>
+        <h4>2018-2022 | Graduate </h4>
         </div>
     </div>
 
@@ -260,6 +260,20 @@
 
   <div class="timeline">
 
+   <div class="container left">
+      <div class="content">
+        <div class="tag">
+          <h2>Trainity</h2>
+        </div>
+        <div class="desc">
+            <h3><strong>Data Analytics Virtual Intern</strong></h3>
+            <p>May 2023 - August 2023</p><br>
+		<h2>In this Internship Program with Trainity, I learned several skills of Data Analytics like Data Analytics Fundamentals, Advance Excel, Tableau, Advanced SQL, Statistics.</h2><br>
+		<h2>Worked on real-world projects like Data Analytics Process, Instagram User Analytics, Operation & Metric Analytics, Hiring Process Analytics, IMDB Movie Analysis, Bank Loan Case Study, Impact of Car Features, ABC Call Volume Trend Analysis as a part of this Internship Program Assignment Tasks.</h2>
+        </div>
+      </div>
+    </div>
+
     <div class="container right">
       <div class="content">
         <div class="tag">
@@ -292,10 +306,8 @@ considered overpriced based on certain features using
 Exploratory Data Analysis.</h2><br>
 <h2> The model is then trained using an appropriate dataset
 and performance evaluation is also done using various
-performance metrics. The best model, i.e. the model with
-highest accuracy is used to predict the price of the car. As
-evident above, our best model came out to be Random
-Forest Regression with an accuracy of 88.36%.</h2>
+performance metrics.</h2><br> <h2>The best model, i.e. the model with
+highest accuracy is used to predict the price of the car.</h2>
         </div>
       </div>
     </div>
