--- a/index.html
+++ b/index.html
@@ -260,6 +260,26 @@
 
   <div class="timeline">
 
+    <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>VJ IT Services</h2>
+        </div>
+        <div class="desc">
+            <h3><strong>Sports Data Executive</strong></h3>
+            <p>April 2024 - July 2024</p><br>
+		<h2>My working profile in this company was Data Management and Research where the key job responsibility was updation of Full time Result of the various sports events through multiple
+ providers/bookies for LSports Company. Furthermore,
+handling and resolving missing full-time tickets/chats and updating the client regarding the sports event statuses. 
+Creating/updating players as per their current team squad
+ verifying through official team webpage. 
+Updating Start Date and Time for new events referring through
+ multiple providers and official league pages.</h2>
+        </div>
+      </div>
+    </div>
+
+
    <div class="container left">
       <div class="content">
         <div class="tag">
