--- a/index.html
+++ b/index.html
@@ -269,11 +269,15 @@
             <h3><strong>Sports Data Executive</strong></h3>
             <p>April 2024 - July 2024</p><br>
 		<h2>My working profile in this company was Data Management and Research where the key job responsibility was updation of Full time Result of the various sports events through multiple
- providers/bookies for LSports Company. Furthermore,
-handling and resolving missing full-time tickets/chats and updating the client regarding the sports event statuses. 
-Creating/updating players as per their current team squad
- verifying through official team webpage. 
-Updating Start Date and Time for new events referring through
+ providers/bookies for LSports Company.</h2><br> 
+		
+		<h2>Furthermore,
+handling and resolving missing full-time tickets/chats and updating the client regarding the sports event statuses. </h2><br>
+		
+		<h2>Creating/updating players as per their current team squad
+ verifying through official team webpage. </h2><br>
+		
+		<h2>Updating Start Date and Time for new events referring through
  multiple providers and official league pages.</h2>
         </div>
       </div>
