--- a/index.html
+++ b/index.html
@@ -146,24 +146,6 @@
 
             <div class="bar">
               <div class="info">
-                <img src="./assets/images/skills/qlikview.png"/ width=210px height=220 px>
-                <span>Qlik View</span>
-              </div>
-            </div>
-
-            <div class="bar">
-              <div class="info">
-                <img src="./assets/images/skills/qliksense.png"/>
-                <span>QlikSense</span>
-              </div>
-            </div>   
-
-	</div>
-
-          <div class="row" id="skillsContainer">
-
-            <div class="bar">
-              <div class="info">
                 <img src="./assets/images/skills/html css js.jpg"/ width=210 px height=220 px>
                 <span>Html+CSS+JavaScript</span>
               </div>
@@ -175,13 +157,7 @@
                 <span>Core Java</span>
               </div>
             </div>
-
-            <div class="bar">
-              <div class="info">
-                <img src="./assets/images/skills/sf admin.jpg"/ width=210 px height=220 px>
-                <span>Salesforce Admin</span>
-              </div>
-            </div>
+ 
 
 	</div>
 
@@ -260,43 +236,33 @@
 
   <div class="timeline">
 
-    <div class="container right">
+    <div class="container left">
       <div class="content">
         <div class="tag">
           <h2>VJ IT Services</h2>
         </div>
         <div class="desc">
             <h3><strong>Sports Data Executive</strong></h3>
-            <p>April 2024 - July 2024</p><br>
-		<h2>My working profile in this company was Data Management and Research where the key job responsibility was updation of Full time Result of the various sports events through multiple
- providers/bookies for LSports Company.</h2><br> 
+            <p>April 2024 - October 2024</p><br>
+		<h2>My working profile in this company was Data Management and Research where my key job responsibility was providing accurate and reliable Full Time Result, Live
+ Scores+Logs and statistics of major leagues and games
+ through multiple providers/bookies to the clients.</h2><br> 
 		
 		<h2>Furthermore,
-handling and resolving missing full-time tickets/chats and updating the client regarding the sports event statuses. </h2><br>
+Handling missing full-time tickets/chats/events and updating
+ the clients regarding the event status information of various
+ sports matches. </h2><br>
 		
-		<h2>Creating/updating players as per their current team squad
- verifying through official team webpage. </h2><br>
+		<h2>Researching and Mapping the players as per their current
+ team squad verifying through official team webpage. </h2><br>
 		
-		<h2>Updating Start Date and Time for new events referring through
- multiple providers and official league pages.</h2>
+		<h2>Updating KickOff Date and Time for new upcoming sport
+ events referring through multiple providers and official league
+ pages. </h2>
         </div>
       </div>
     </div>
 
-
-   <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>Trainity</h2>
-        </div>
-        <div class="desc">
-            <h3><strong>Data Analytics Virtual Intern</strong></h3>
-            <p>May 2023 - August 2023</p><br>
-		<h2>In this Internship Program with Trainity, I learned several skills of Data Analytics like Data Analytics Fundamentals, Advance Excel, Tableau, Advanced SQL, Statistics.</h2><br>
-		<h2>Worked on real-world projects like Data Analytics Process, Instagram User Analytics, Operation & Metric Analytics, Hiring Process Analytics, IMDB Movie Analysis, Bank Loan Case Study, Impact of Car Features, ABC Call Volume Trend Analysis as a part of this Internship Program Assignment Tasks.</h2>
-        </div>
-      </div>
-    </div>
 
     <div class="container right">
       <div class="content">
