--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
         
         <div class="box-container">
             <div class="box">
-              <p><span> age: </span> 25</p>
+              <p><span> age: </span> 26</p>
               <p><span> phone : </span> +91 7353061522</p>
             </div>
             <div class="box">
               <p><span> email : </span> 61anoopdey@gmail.com</p>
-              <p><span> place : </span> Belgaum, India - 590001</p>
+              <p><span> place : </span> Pune, India - 410001</p>
             </div>
         </div>
         
@@ -236,6 +236,26 @@
 
   <div class="timeline">
 
+	  <div class="container right">
+      <div class="content">
+        <div class="tag">
+          <h2>Delhivery Private Limited</h2>
+        </div>
+        <div class="desc">
+            <h3><strong>Assistant Team Lead</strong></h3>
+            <p>January 2025</p><br>
+		<h2>My key job responsibility here was was handling of field executives in delivery of shipments by assigning them their areas allotting 80-100 shipments per rider and giving dispatch to riders and van, further tracing of shipments through customers whether it is being delivered or not and then the same is reverted back to the rider.</h2><br> 
+		
+		<h2>Before the assignment of routes to Field Executive, the inbound of shipments through truck is done in the facility with the help of riders through scanners along the outbound of bag of return shipments. </h2><br>
+		
+		<h2>The ATL was also responsible for doing audit in the facility to find if there are any missing or ageing shipments in the facility which was there in the facility for more than 24 hours in the facility to be delivered to the client, then the same is being asked to the client whether he wants the shipment to be delivered or returned to the hub then we follow up accordingly.</h2><br>
+		
+		<h2>Then finally the ATLs do the End of dispatch of Field Executives by collecting pick-ups, return shipments and bag them separately for return to outbound for next day, then collect cash from riders which they have taken from customers for COD orders and then do cash reconciliation for the same and do the closure accordingly, if they have good closure percentage that is no of shipments successfully delivered in first attempt by total assigned shipments for each rider.</h2>
+        </div>
+      </div>
+    </div>
+
+
     <div class="container left">
       <div class="content">
         <div class="tag">
@@ -377,3 +397,4 @@ highest accuracy is used to predict the price of the car.</h2>
 
 </body>
 </html>
+
