--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ highest accuracy is used to predict the price of the car.</h2>
 <!-- experience section ends -->
 
 
-<!-- footer section starts -->
+<!-- footer section starts 
 <section class="footer">
 
   <div class="box-container">
@@ -354,14 +354,15 @@ highest accuracy is used to predict the price of the car.</h2>
           <h3>contact info</h3>
           <p> <i class="fas fa-phone"></i>+91 7353061522</p>
           <p> <i class="fas fa-envelope"></i>61anoopdey@gmail.com</p>
-          <p> <i class="fas fa-map-marked-alt"></i>Belgaum, India-590001</p>
+          <p> <i class="fas fa-map-marked-alt"></i> Pune - 411001</p>
       </div>
   </div>
 
   <h1 class="credit">Designed with <i class="fa fa-heart pulse"></i> by <a href="https://www.linkedin.com/in/anoopdey61"> Anoop Dey</a></h1>
 
 </section>
-<!-- footer section ends -->
+	
+	footer section ends -->
 
 
 <!-- scroll top btn -->
@@ -397,5 +398,6 @@ highest accuracy is used to predict the price of the car.</h2>
 
 </body>
 </html>
+
 
 
