--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h3>I'm Anoop</h3>
         <span class="tag">Fresher</span>
         
-        <p>I am a B.tech-22 Information Science graduate from KLS GIT, Belgaum. I love to interpret data, analyze results using statistical techniques, use data to solve issues and discover new trend and possibilities, developing and implementing visually engaging charts and graphs that convey the story in easiest manner using Python, also build Dashboards presenting various related chart in one worksheet using tools like MS Excel, Power BI and Tableau. </p>
+        <p>I am a B.tech-22 Information Science graduate from KLS GIT. I love to interpret data, analyze results using statistical techniques, use data to solve issues and discover new trend and possibilities, developing and implementing visually engaging charts and graphs that convey the story in easiest manner using Python, also build Dashboards presenting various related chart in one worksheet using tools like MS Excel, Power BI and Tableau. </p>
         
         <div class="box-container">
             <div class="box">
@@ -398,6 +398,7 @@ highest accuracy is used to predict the price of the car.</h2>
 
 </body>
 </html>
+
 
 
 
